fixed map and added a queue system for the intersection with rules