@@ -1,7 +1,10 @@
 package org.example.models.vehicles;
 
 import org.example.controllers.SimulationController;
+import org.example.models.map.Intersection;
+import org.example.models.map.LaneDirection;
 import org.example.models.map.Map;
+import org.example.models.map.Turns;
 
 import java.awt.Point;
 import java.util.*;
@@ -18,6 +21,7 @@ public class Vehicle {
     private List<Point> path = new ArrayList<>();
     private boolean calculated = false;
     private boolean arrived = false;
+    public boolean turning = false;
 
     private SimulationController simulationController;
 
@@ -74,7 +78,7 @@ public class Vehicle {
      *
      *
      */
-    public void moveToNextPoint() {
+    public void moveToNextPoint(Map map) {
 
         if (position.equals(destination)) {
             arrived = true;
@@ -88,8 +92,47 @@ public class Vehicle {
 
         //here put the priority logic for the intersection
 
+        //prototype
 
+        if(!turning){
+        if(map.isIntersection(nextPoint)){
+            //if the vehicle is the first in the queue
+            Intersection intersection = map.getIntersection(nextPoint);
+            Turns turn = null;
+            if(path.size() >= 4){
+                turn = getTurn(position, path.get(3), map);
+            }else if(path.size() == 3){
+                turn = getTurn(position, path.get(2), map);
+            } else if(path.size() == 2) {
+                turn = getTurn(position, path.get(1), map);
+            }
 
+            if(!intersection.hasTraffic(this)){
+                intersection.addTraffic(this, turn);
+
+            }
+
+                    if(!intersection.canTurn(this, turn)){
+                        System.out.println("Vehicle " + vehicleId + " is waiting at intersection " + nextPoint);
+                        return;
+                    }else{
+                        turning = true;
+                    }
+
+            }
+        }
+
+        if(turning){
+            if(map.isIntersection(position)){
+                Intersection intersection = map.getIntersection(position);
+                if(map.isRoad(nextPoint)){
+                    System.out.println("Vehicle " + vehicleId + " is liberation at " + position);
+                    intersection.removeTraffic(this);
+                    turning = false;
+                }
+            }
+        }
+        //----------------
 
         if (!is_next_move_colision(nextPoint)) {
             this.position = nextPoint;
@@ -97,6 +140,8 @@ public class Vehicle {
         }
 
     }
+
+
 
     /**
      * calculates the path
@@ -113,7 +158,7 @@ public class Vehicle {
             System.out.println("No path found for vehicle " + vehicleId);
             return;
         }
-        path = paths.get(0);
+        path = paths.getFirst();
 
         path.removeFirst();
 
@@ -140,7 +185,7 @@ public class Vehicle {
 
         while (!queue.isEmpty()) {
             List<Point> currentPath = queue.poll();
-            Point currentPoint = currentPath.get(currentPath.size() - 1);
+            Point currentPoint = currentPath.getLast();
 
             // If the current point is a destination, store the path
             if (currentPoint.equals(destination)) {
@@ -192,7 +237,59 @@ public class Vehicle {
         return false;
     }
 
+
+
     private double getDistance(Point a, Point b) {
         return Math.sqrt(Math.pow(a.x - b.x, 2) + Math.pow(a.y - b.y, 2));
+    }
+
+
+    private Turns getTurn (Point start, Point end , Map map){
+
+        LaneDirection startDirection = map.getlinedirection(start);
+        LaneDirection endDirection = map.getlinedirection(end);
+
+        switch (startDirection) {
+            case NORTH:
+                switch (endDirection) {
+                    case NORTH:
+                        return Turns.FROM_NORTH_STRAIGHT;
+                    case EAST:
+                        return Turns.FROM_NORTH_RIGHT;
+                    case WEST:
+                        return Turns.FROM_NORTH_LEFT;
+
+                }
+            case SOUTH:
+                switch (endDirection) {
+                    case SOUTH:
+                        return Turns.FROM_SOUTH_STRAIGHT;
+                    case EAST:
+                        return Turns.FROM_SOUTH_LEFT;
+                    case WEST:
+                        return Turns.FROM_SOUTH_RIGHT;
+                }
+            case EAST:
+                switch (endDirection) {
+                    case EAST:
+                        return Turns.FROM_EAST_STRAIGHT;
+                    case NORTH:
+                        return Turns.FROM_EAST_LEFT;
+                    case SOUTH:
+                        return Turns.FROM_EAST_RIGHT;
+                }
+            case WEST:
+                switch (endDirection) {
+                    case WEST:
+                        return Turns.FROM_WEST_STRAIGHT;
+                    case NORTH:
+                        return Turns.FROM_WEST_RIGHT;
+                    case SOUTH:
+                        return Turns.FROM_WEST_LEFT;
+                }
+            default:
+                return null;
+        }
+
     }
 }
